# RealTimeSolarSystemProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/rtssp/: graphics.h  math.h  rtssp.h  scene.h
res/shaders/scene/: fragment.glsl  vertex.glsl
src/cglm/: affine.c  cam.c  io.c  mat3.c  mat4.c  project.c  quat.c  vec3.c  vec4.c
src/glad/: glad.c
src/rtssp/: graphics.c  main.c  math.c  rtssp.c  scene.c
